# parse_library

./: .gitignore  README.md  books.json  custom_check.py  defaults.py  download.py  main.py  parse_tululu_book.py  parse_tululu_category.py  parsers.py  pyproject.toml  render_website.py  template.html  tululu_urls.py
pages/: index1.html  index2.html  index3.html  index4.html  index5.html  index6.html
static/: bootstrap.min.css
