[tool.poetry]
name = "parse_library"
version = "0.1.0"
description = ""
authors = ["Roman Okatev <43115066+Nebulawalker@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
